--- a/07-databases/butterflies/views/layout.erb
+++ b/07-databases/butterflies/views/layout.erb
@@ -5,6 +5,10 @@
   <title>Butterflies</title>
 </head>
 <body>
+  <nav>
+    <a href="/butterflies">All butterflies</a>
+    <a href="/butterflies/new">New butterfly</a>
+  </nav>
   <%= yield %>
 </body>
 </html>
