--- a/07-databases/butterflies/views/layout.erb
+++ b/07-databases/butterflies/views/layout.erb
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Butterflies</title>
+  <link rel="stylesheet" href="/css/butterflies.css">
 </head>
 <body>
-  <nav>
-    <a href="/butterflies">All butterflies</a>
-    <a href="/butterflies/new">New butterfly</a>
-  </nav>
-  <%= yield %>
+  <div class="container">
+    <nav>
+      <a href="/butterflies">All butterflies</a>
+      <a href="/butterflies/new">New butterfly</a>
+    </nav>
+    <%= yield %>
+  </div>
 </body>
 </html>
