--- a/07-databases/butterflies-ar/views/butterflies_new.erb
+++ b/07-databases/butterflies-ar/views/butterflies_new.erb
@@ -16,5 +16,16 @@
     <input type="url" name="image" placeholder="http://...">
   </label>
 
+
+  <label>
+    Larval plant:
+    <select name="plant_id">
+      <option></option><!-- Blank is first so it's the default -->
+      <% Plant.all.each do |plant| %>
+        <option value="<%= plant.id %>"><%= plant.name %></option>
+      <% end %>
+    </select>
+  </label>
+
   <button>Create butterfly</button>
 </form>
