--- a/08-rails/solar_system/app/views/planets/show.html.erb
+++ b/08-rails/solar_system/app/views/planets/show.html.erb
@@ -10,3 +10,8 @@
   <li>Distance from Earth: <%= @planet.distance_from_earth %></li>
   <li>Moons: <%= @planet.moons %></li>
 </ul>
+
+<div class="controls">
+  <%= link_to 'Edit planet', edit_planet_path(@planet.id) %>
+  <%= button_to 'Delete planet', planet_path(@planet.id), :method => 'delete' %>
+</div>
