--- a/08-rails/moma/app/views/layouts/application.html.erb
+++ b/08-rails/moma/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <nav>
+      <%= link_to 'All artists', artists_path %>
+      <%= link_to 'New artist', new_artist_path %>
+    </nav>
     <%= yield %>
   </body>
 </html>
