--- a/08-rails/tunr/app/views/layouts/application.html.erb
+++ b/08-rails/tunr/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   </head>
 
   <body>
+
+    <nav>
+      <%= link_to 'Home', root_path %>
+      <% if @current_user.present? %>
+        <%= link_to "Log out #{ @current_user.email }", login_path, :method => 'delete' %>
+      <% else %>
+        <%= link_to 'Sign up', new_user_path %>
+        <%= link_to 'Login', login_path %>
+      <% end %>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
