--- a/08-rails/tunr/app/views/layouts/application.html.erb
+++ b/08-rails/tunr/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <nav>
       <%= link_to 'Home', root_path %>
       <% if @current_user.present? %>
+        <%= link_to "New mixtape", new_mixtape_path %><!-- Security through obscurity -->
         <%= link_to "Log out #{ @current_user.email }", login_path, :method => 'delete' %>
       <% else %>
         <%= link_to 'Sign up', new_user_path %>
