--- a/08-rails/tunr/app/views/layouts/application.html.erb
+++ b/08-rails/tunr/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <nav>
       <%= link_to 'Home', root_path %>
       <% if @current_user.present? %>
+        <% if @current_user.admin? %>
+          <%= link_to 'Users', users_path %>
+        <% end %>
         <%= link_to "New mixtape", new_mixtape_path %><!-- Security through obscurity -->
         <%= link_to "Log out #{ @current_user.email }", login_path, :method => 'delete' %>
       <% else %>
