how to bootstrap bootstrap

--- a/08-rails/tunr/app/views/pages/home.html.erb
+++ b/08-rails/tunr/app/views/pages/home.html.erb
@@ -1,8 +1,24 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 
-<% if @current_user.present? %>
-  <p>
-    Welcome back user <%= @current_user.email %>
-  </p>
-<% end %>
+<div class="row">
+  <div class="col-md-4 offset-md-4">
+    <h1>Pandemic Pandemonium Grips Planet</h1>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-3">
+    <h2>David Chapelle tests positive</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae officiis, illum repudiandae vel quis voluptatum totam tenetur ex esse. Sint in dolores enim ipsum sequi laborum animi atque vel eius?</p>
+  </div>
+
+  <div class="col-md-6">
+    <h2>Earth Actually Flat! PROVEN!</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tempora obcaecati reiciendis nihil saepe eum eaque vero, soluta, eveniet cupiditate temporibus ad nam, ut sequi illum officia perspiciatis excepturi assumenda.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima quia distinctio, facilis voluptatum quaerat iusto inventore totam corporis beatae, sint enim consectetur incidunt dolore cumque expedita corrupti reiciendis voluptate voluptates.</p>
+  </div>
+
+  <div class="col-md-3">
+    <h2>Sydney reports no new cases again</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla consectetur optio dolorem, beatae dicta veniam omnis quae perferendis, in similique nisi, eveniet esse quia consequuntur deleniti natus dolorum suscipit corrupti?</p>
+  </div>
+</div>
