--- a/08-rails/tunr/app/views/layouts/application.html.erb
+++ b/08-rails/tunr/app/views/layouts/application.html.erb
@@ -5,26 +5,32 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <div class="container">
 
-    <nav>
-      <%= link_to 'Home', root_path %>
-      <% if @current_user.present? %>
-        <% if @current_user.admin? %>
-          <%= link_to 'Users', users_path %>
+      <nav>
+        <%= link_to 'Home', root_path %>
+        <% if @current_user.present? %>
+          <% if @current_user.admin? %>
+            <%= link_to 'Users', users_path %>
+          <% end %>
+          <%= link_to "New mixtape", new_mixtape_path %><!-- Security through obscurity -->
+          <%= link_to "Log out #{ @current_user.email }", login_path, :method => 'delete' %>
+        <% else %>
+          <%= link_to 'Sign up', new_user_path %>
+          <%= link_to 'Login', login_path %>
         <% end %>
-        <%= link_to "New mixtape", new_mixtape_path %><!-- Security through obscurity -->
-        <%= link_to "Log out #{ @current_user.email }", login_path, :method => 'delete' %>
-      <% else %>
-        <%= link_to 'Sign up', new_user_path %>
-        <%= link_to 'Login', login_path %>
-      <% end %>
-    </nav>
+      </nav>
 
-    <%= yield %>
+      <%= yield %>
+
+    </div>
+
   </body>
 </html>
