--- a/08-rails/tunr/app/views/session/new.html.erb
+++ b/08-rails/tunr/app/views/session/new.html.erb
@@ -7,11 +7,15 @@
 <% end %>
 
 <%= form_tag login_path do %>
-  <%= label_tag :email %>
-  <%= email_field_tag :email %>
+  <div class="form-group">
+    <%= label_tag :email %>
+    <%= email_field_tag :email, nil, :class => 'form-control', :autofocus => true %>
+  </div>
 
-  <%= label_tag :password %>
-  <%= password_field_tag :password %>
+  <div class="form-group">
+    <%= label_tag :password %>
+    <%= password_field_tag :password, nil, :class => 'form-control' %>
+  </div>
 
   <%= submit_tag "Sign in" %>
 <% end %>
